# minesweeper

./: .gitignore  .pre-commit-config.yaml  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: pytest-ci.yml
src/: minesweeper.py
src/minesweeper/: __init__.py  minesweeper.py
tests/: test_minesweeper.py
